[package]
name = "demolition"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
chrono = { version = "=0.4.42", default-features = false, features = ["std"] }
env_logger = "=0.11.8"
humantime = "=2.3.0"
log = { version = "=0.4.29", features = ["std"] }
rustix = { version = "=1.1.3", features = ["mount"] }
